--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title> The Hub </title>
     </head>
     <body>
-        <p> <a href="https://www.google.com"> <img border="0" alt="Google" src="/images/google_logo.jpg" width="100" height="100"> </a> </p>
+        <p> <a href="https://www.google.com"> <img border="0" alt="Google" src="images/google_logo.jpg" width="100" height="100"> </a> </p>
         <p> <a href="https://www.Facebook.com"> Facebook </a> </p>
         <p> <a href="https://www.Twitter.com"> Twitter </a> </p>
         <p> <a href="https://www.YouTube.com"> YouTube </a> </p>
