--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title> The Hub </title>
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
-        <p><a href="https://www.google.com"><img border="0" alt="Google" src="images/google_logo.jpg" width="100" height="100"></a></p>
+        <p><a href="https://www.google.com"><img border="0" alt="Google" src="images/iconmonstr-chrome-1-240.png" width="100" height="100"></a></p>
         <p><a href="https://www.Facebook.com"> Facebook </a></p>
         <p><a href="https://www.Twitter.com"> Twitter </a></p>
         <p><a href="https://www.YouTube.com"> YouTube </a></p>
