--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <p><a href="https://www.google.com"><img border="0" alt="Google" src="images/iconmonstr-chrome-1-240.png" width="100" height="100"></a></p>
-        <p><a href="https://www.Facebook.com"> Facebook </a></p>
-        <p><a href="https://www.Twitter.com"> Twitter </a></p>
-        <p><a href="https://www.YouTube.com"> YouTube </a></p>
-        <p><a href="https://www.Twitch.tv"> Twitch </a></p>
-        <p><a href="https://www.linkedin.com"> Linkedin </a></p>
-        <p><a href="https://riverbankandtrust.com"> River Bank </a></p>
+        <p><a href="https://www.Facebook.com"><img border="0" alt="Facebook" src="images/iconmonstr-facebook-2-240.png" width="100" height="100"></a></p>
+        <p><a href="https://www.Twitter.com"><img border="0" alt="Twitter" src="images/iconmonstr-twitter-1-240.png" width="100" height="100"></a></p>
+        <p><a href="https://www.YouTube.com"><img border="0" alt="YouTube" src="images/iconmonstr-youtube-6-240.png" width="100" height="100"></a></p>
+        <p><a href="https://www.Twitch.tv"><img border="0" alt="Twitch.tv" src="images/iconmonstr-gamepad-3-240.png" width="100" height="100"></a></p>
+        <p><a href="https://www.linkedin.com"><img border="0" alt="Linkedin" src="images/iconmonstr-linkedin-2-240.png" width="100" height="100"></a></p>
+        <p><a href="https://riverbankandtrust.com"><img border="0" alt="River Bank" src="images/iconmonstr-coin-10-240.png" width="100" height="100"></a></p>
     </body>
 </html>
