--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title> The Hub </title>
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     </head>
-    <body>
+    <body background="images/Razor%20logo%20orange.jpg">
+
         <p><a href="https://www.google.com"><img border="0" alt="Google" src="images/iconmonstr-chrome-1-240.png" width="75" height="75"></a></p>
         <p><a href="https://www.Facebook.com"><img border="0" alt="Facebook" src="images/iconmonstr-facebook-2-240.png" width="75" height="75"></a></p>
         <p><a href="https://www.Twitter.com"><img border="0" alt="Twitter" src="images/iconmonstr-twitter-1-240.png" width="75" height="75"></a></p>
